--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 
 #scheduleCont {
   display: none;
+  padding: 0px !important;
 }
 
 #statsCont {
   display: none;
+  padding: 0px !important;
 }
 
 #teamStatsCont {
@@ -16,6 +18,7 @@
 
 #playerStatsCont {
   display: none;
+  padding: 0px !important;
 }
 
 #rotationCont {
@@ -28,6 +31,10 @@
 
 #postgamePage {
   display: none;
+}
+
+.table {
+  font-size: 1.5vh;
 }
 
 
